# angular-router-analyzer

./: Cargo.toml  README.md  output.txt
src/: main.rs  model.rs  parser.rs  resolver.rs
